feat: new images added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
 
         <div class="not-found">
-            <img src="imagens/404.png" width="300px">
+            <img src="imagens/404.svg">
             <p>Local Inválido</p>
         </div>
 
         <div class="box-clima">
-            <img src="">
+            <img src="" width="300px">
             <p class="temperatura"></p>
             <p class="descricao"></p>
         </div>
