--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="not-found">
-            <img src="imagens/404.svg">
+            <img src="imagens/error.svg">
             <p>Local Inválido</p>
         </div>
 
@@ -30,6 +30,7 @@
             <img src="" width="300px">
             <p class="temperatura"></p>
             <p class="descricao"></p>
+            <p class="cidade"></p>
         </div>
 
         <div class="detalhes-clima">
