feat: display location date and time

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
             <img src="" width="300px">
             <p class="temperatura"></p>
             <p class="descricao"></p>
-            <p class="cidade"></p>
+        </div>
+
+        <div class="info-local">
+            <div class="local">
+                <i class="fa-solid fa-map-location-dot"></i>
+                <p class="cidade"></p>
+            </div>
+            <p class="data-hora"></p>
+
         </div>
 
         <div class="detalhes-clima">
