feat: maximum and minimum temperature added

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container">
         <div class="box-pesquisa">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text"  placeholder="Local">
+            <input type="text"  placeholder="Digite um local">
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
 
         <div class="not-found">
             <img src="imagens/error.svg">
-            <p>Local Inválido</p>
+            <p>Local Não Encontrado :/</p>
         </div>
 
         <div class="box-clima">
@@ -44,19 +44,23 @@
         <div class="detalhes-clima">
 
             <div class="humidade">
-                <i class="fa-solid fa-water"></i>
-                <div class="texto">
-                    <span></span>
-                    <p>Humidade</p>
-                </div>
+                <i class="fa-solid fa-droplet"></i>
+                <span></span> 
             </div>
 
             <div class="ventos">
                 <i class="fa-solid fa-wind"></i>
-                <div class="texto">
-                    <span></span>
-                    <p>Veloc. do Vento</p>
-                </div>
+                <span></span> 
+            </div>
+
+            <div class="min">
+                <i class="fa-solid fa-temperature-arrow-up"></i>
+                <span></span> 
+            </div>
+
+            <div class="max">
+                <i class="fa-solid fa-temperature-arrow-down"></i>
+                <span></span> 
             </div>
 
         </div>
